# ori-sdk-python

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  PRINCIPLES.md  README.md  SECURITY.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: implementation.yml
.github/workflows/: ci.yml
ori_sdk/: __init__.py  errors.py  gateway.py  health.py  helpers.py  models.py  validation.py
tests/: test_contract_fixtures.py  test_errors.py  test_gateway.py  test_health.py  test_helpers.py  test_models.py  test_validation.py
tests/fixtures/: gateway_reasoning_error_response.json  gateway_reasoning_request.json  gateway_reasoning_response.json  runtime_health_error.json  runtime_health_success.json
